[package]
authors    = ['Parallel Team']
edition    = '2021'
homepage   = 'https://parallel.fi'
license    = 'Apache'
name       = 'runtime-integration-tests'
repository = 'https://github.com/parallel-finance/parallel'
version    = '1.8.9'

[dependencies]
codec             = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive'] }
hex               = { version = '0.4' }
hex-literal       = '0.3.3'
serde             = { version = '1.0.136', features = ['derive'], optional = true }
serde_json        = '1.0.79'
smallvec          = '1.6.1'
static_assertions = '1.1.0'

# Substrate
frame-support   = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.24' }
frame-system    = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.24' }
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.24' }
pallet-staking  = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.24' }
sp-runtime      = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.24' }
sp-std          = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.24' }

# Polkadot dependencies
pallet-xcm              = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.24' }
polkadot-parachain      = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.24' }
polkadot-runtime-common = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.24' }
xcm                     = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.24' }
xcm-builder             = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.24' }
xcm-executor            = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.24' }

# Cumulus dependencies
cumulus-pallet-dmp-queue        = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.24' }
cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.24' }
cumulus-pallet-xcm              = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.24' }
cumulus-pallet-xcmp-queue       = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.24' }
cumulus-primitives-core         = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.24' }
cumulus-primitives-timestamp    = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.24' }
cumulus-primitives-utility      = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.24' }
pallet-collator-selection       = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.24' }
parachain-info                  = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.24' }

# ORML dependencies
orml-oracle      = { version = '0.4.1-dev' }
orml-traits      = { version = '0.4.1-dev' }
orml-vesting     = { version = '0.4.1-dev' }
orml-xcm         = { version = '0.4.1-dev' }
orml-xcm-support = { version = '0.4.1-dev' }
orml-xtokens     = { version = '0.4.1-dev' }

# Parallel dependencies
heiko-runtime                 = { path = '../runtime/heiko' }
pallet-amm                    = { path = '../pallets/amm' }
pallet-asset-registry         = { path = '../pallets/asset-registry' }
pallet-bridge                 = { path = '../pallets/bridge' }
pallet-crowdloans             = { path = '../pallets/crowdloans' }
pallet-currency-adapter       = { path = '../pallets/currency-adapter' }
pallet-emergency-shutdown     = { path = '../pallets/emergency-shutdown' }
pallet-farming                = { path = '../pallets/farming' }
pallet-liquid-staking         = { path = '../pallets/liquid-staking' }
pallet-loans                  = { path = '../pallets/loans' }
pallet-loans-rpc-runtime-api  = { path = '../pallets/loans/rpc/runtime-api' }
pallet-prices                 = { path = '../pallets/prices' }
pallet-router                 = { path = '../pallets/router' }
pallet-router-rpc-runtime-api = { path = '../pallets/router/rpc/runtime-api' }
pallet-traits                 = { path = '../pallets/traits' }
pallet-xcm-helper             = { path = '../pallets/xcm-helper' }
parallel-runtime              = { path = '../runtime/parallel' }
primitives                    = { package = 'parallel-primitives', path = '../primitives' }

[dev-dependencies]
cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.24' }
cumulus-test-relay-sproof-builder     = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.24' }
env_logger                            = '0.9.0'
kusama-runtime                        = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.24' }
log                                   = '0.4.14'
polkadot-primitives                   = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.24' }
polkadot-runtime                      = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.24' }
polkadot-runtime-parachains           = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.24' }
sp-io                                 = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.24' }
sp-trie                               = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.24' }
statemine-runtime                     = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.24' }
statemint-runtime                     = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.24' }
xcm-emulator                          = { git = 'https://github.com/shaunxw/xcm-simulator.git', rev = '651af78d6d7521dc76e1f6bb257af485f8a454c7' }
