[package]
authors    = ['Parallel Team']
edition    = '2021'
homepage   = 'https://parallel.fi'
license    = 'Apache'
name       = 'runtime-integration-tests'
repository = 'https://github.com/parallel-finance/parallel'
version    = '1.9.2'

[dependencies]
codec             = { package = 'parity-scale-codec', version = '3.1.5', default-features = false, features = ['derive'] }
hex               = { version = '0.4' }
hex-literal       = '0.3.3'
serde             = { version = '1.0.136', features = ['derive'], optional = true }
serde_json        = '1.0.79'
smallvec          = '1.6.1'
static_assertions = '1.1.0'

# Substrate
frame-support   = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }
frame-system    = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }
pallet-staking  = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }
sp-runtime      = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }
sp-std          = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }

# Polkadot dependencies
pallet-xcm              = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.28' }
polkadot-parachain      = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.28' }
polkadot-runtime-common = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.28' }
xcm                     = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.28' }
xcm-builder             = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.28' }
xcm-executor            = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.28' }

# Cumulus dependencies
cumulus-pallet-dmp-queue        = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.28' }
cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.28' }
cumulus-pallet-xcm              = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.28' }
cumulus-pallet-xcmp-queue       = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.28' }
cumulus-primitives-core         = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.28' }
cumulus-primitives-timestamp    = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.28' }
cumulus-primitives-utility      = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.28' }
pallet-collator-selection       = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.28' }
parachain-info                  = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.28' }

# ORML dependencies
orml-oracle      = { version = '0.4.1-dev' }
orml-traits      = { version = '0.4.1-dev' }
orml-vesting     = { version = '0.4.1-dev' }
orml-xcm         = { version = '0.4.1-dev' }
orml-xcm-support = { version = '0.4.1-dev' }
orml-xtokens     = { version = '0.4.1-dev' }

# Parallel dependencies
heiko-runtime                 = { path = '../runtime/heiko' }
pallet-amm                    = { path = '../pallets/amm' }
pallet-asset-registry         = { path = '../pallets/asset-registry' }
pallet-bridge                 = { path = '../pallets/bridge' }
pallet-crowdloans             = { path = '../pallets/crowdloans' }
pallet-currency-adapter       = { path = '../pallets/currency-adapter' }
pallet-emergency-shutdown     = { path = '../pallets/emergency-shutdown' }
pallet-farming                = { path = '../pallets/farming' }
pallet-liquid-staking         = { path = '../pallets/liquid-staking' }
pallet-loans                  = { path = '../pallets/loans' }
pallet-loans-rpc-runtime-api  = { path = '../pallets/loans/rpc/runtime-api' }
pallet-prices                 = { path = '../pallets/prices' }
pallet-router                 = { path = '../pallets/router' }
pallet-router-rpc-runtime-api = { path = '../pallets/router/rpc/runtime-api' }
pallet-traits                 = { path = '../pallets/traits' }
pallet-xcm-helper             = { path = '../pallets/xcm-helper' }
parallel-runtime              = { path = '../runtime/parallel' }
primitives                    = { package = 'parallel-primitives', path = '../primitives' }

[dev-dependencies]
cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.28' }
cumulus-test-relay-sproof-builder     = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.28' }
env_logger                            = '0.9.0'
kusama-runtime                        = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.28' }
log                                   = '0.4.14'
polkadot-primitives                   = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.28' }
polkadot-runtime                      = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.28' }
polkadot-runtime-parachains           = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.28' }
sp-io                                 = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }
sp-trie                               = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }
statemine-runtime                     = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.28' }
statemint-runtime                     = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.28' }
xcm-emulator                          = { git = 'https://github.com/shaunxw/xcm-simulator.git', rev = 'ab5cd6c5fabe6ddda52ed6803ee1bf54c258fefe' }
