[package]
authors    = { workspace = true }
edition    = '2021'
homepage   = 'https://parallel.fi'
license    = 'Apache'
name       = 'runtime-integration-tests'
repository = { workspace = true }
version    = { workspace = true }

[dependencies]
codec             = { workspace = true, package = 'parity-scale-codec', features = ['derive'] }
hex               = { workspace = true }
hex-literal       = { workspace = true }
serde             = { workspace = true, features = ['derive'], optional = true }
serde_json        = { workspace = true }
static_assertions = { workspace = true }
scale-info        = { workspace = true, features = ["derive"] }

# Substrate
frame-support   = { workspace = true }
frame-system    = { workspace = true }
pallet-balances = { workspace = true }
pallet-staking  = { workspace = true }
sp-runtime      = { workspace = true }
sp-std          = { workspace = true }
sp-core         = { workspace = true }

# Polkadot dependencies
pallet-xcm              = { workspace = true }
polkadot-parachain      = { workspace = true }
polkadot-runtime-common = { workspace = true }
xcm                     = { workspace = true }
xcm-builder             = { workspace = true }
xcm-executor            = { workspace = true }

# Cumulus dependencies
cumulus-pallet-dmp-queue        = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-pallet-xcm              = { workspace = true }
cumulus-pallet-xcmp-queue       = { workspace = true }
cumulus-primitives-core         = { workspace = true }
cumulus-primitives-timestamp    = { workspace = true }
cumulus-primitives-utility      = { workspace = true }
pallet-collator-selection       = { workspace = true }
parachain-info                  = { workspace = true }

# ORML dependencies
orml-oracle      = { workspace = true }
orml-traits      = { workspace = true }
orml-vesting     = { workspace = true }
orml-xcm         = { workspace = true }
orml-xcm-support = { workspace = true }
orml-xtokens     = { workspace = true }

# Parallel dependencies
heiko-runtime                 = { workspace = true, features = ['runtime-benchmarks'] }
pallet-amm                    = { workspace = true }
pallet-asset-registry         = { workspace = true }
pallet-bridge                 = { workspace = true }
pallet-crowdloans             = { workspace = true }
pallet-currency-adapter       = { workspace = true }
pallet-emergency-shutdown     = { workspace = true }
pallet-farming                = { workspace = true }
pallet-liquid-staking         = { workspace = true }
pallet-loans                  = { workspace = true }
pallet-loans-rpc-runtime-api  = { workspace = true }
pallet-prices                 = { workspace = true }
pallet-router                 = { workspace = true }
pallet-router-rpc-runtime-api = { workspace = true }
pallet-traits                 = { workspace = true }
pallet-xcm-helper             = { workspace = true }
parallel-runtime              = { workspace = true, features = ['runtime-benchmarks'] }
primitives                    = { workspace = true }
vanilla-runtime               = { workspace = true, features = ['runtime-benchmarks'] }
kerria-runtime                = { workspace = true, features = ['runtime-benchmarks'] }

[dev-dependencies]
cumulus-primitives-parachain-inherent = { workspace = true }
cumulus-test-relay-sproof-builder     = { workspace = true }
env_logger                            = { workspace = true }
kusama-runtime                        = { workspace = true, features = ['runtime-benchmarks'] }
log                                   = { workspace = true }
polkadot-primitives                   = { workspace = true }
polkadot-runtime                      = { workspace = true, features = ['runtime-benchmarks'] }
polkadot-runtime-parachains           = { workspace = true }
sp-io                                 = { workspace = true }
sp-trie                               = { workspace = true }
statemine-runtime                     = { workspace = true, features = ['runtime-benchmarks'] }
statemint-runtime                     = { workspace = true, features = ['runtime-benchmarks'] }
xcm-emulator                          = { workspace = true }
