[package]
authors = ['Parallel Team']
edition = '2018'
name    = 'parallel-primitives'
version = '1.0.0'

[dependencies]
codec             = { package = 'parity-scale-codec', version = '2.3.1', default-features = false }
frame-support     = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11', default-features = false }
frame-system      = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11', default-features = false }
orml-oracle       = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }
serde             = { version = '1', optional = true }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11', default-features = false }
sp-core           = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11', default-features = false }
sp-io             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11', default-features = false }
sp-runtime        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11', default-features = false }
sp-std            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11', default-features = false }
xcm               = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.11', default-features = false }
xcm-executor      = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.11', default-features = false }

[features]
default = ['std']
std     = [
  'serde',
  'codec/std',
  'sp-runtime/std',
  'sp-core/std',
  'sp-std/std',
  'sp-io/std',
  'orml-oracle/std',
  'sp-consensus-aura/std',
  'frame-system/std',
  'frame-support/std',
  'xcm-executor/std',
  'xcm/std',
]
